# excel-template-filler

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  web_app.py
config/: llm_config.example.json  mapping_config.example.json  sample_rules_prompt.txt  system_config.example.json
docs/: developer_guide.md  project_design.md  user_guide.md
examples/: create_example_files.py
src/: __init__.py  config_validator.py  data_calculator.py  data_cleaner.py  data_extractor.py  excel_reader.py  excel_writer.py  exception_handler.py  file_manager.py  fill_plan_generator.py  llm_rule_parser.py  nl_rule_parser.py  report_writer.py  rule_parser.py  template_analyzer.py  validator.py  xls_converter.py
src/excel_template_filler/: cli.py  config.py  excel_ops.py  models.py  reports.py
tests/: test_data_pipeline.py  test_excel_reader.py  test_excel_writer.py  test_excel_writer_safety.py  test_fill_plan.py  test_filler.py  test_final_delivery.py  test_nl_rule_parser.py  test_validation_reports.py  test_validator.py  test_web_app.py
