[project]
name = "excel-template-filler"
version = "0.1.0"
description = "Local CLI Excel multi-template filler"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "pywin32>=306; platform_system == 'Windows'",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
excel-template-filler = "excel_template_filler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
